# OpenLocalSearchParser

./: .env.example  .gitignore  README.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: deps.py  openwebui_utils.py  schemas.py
apps/backend/app/api/routes/: documents.py  health.py  mcp.py  openwebui.py  search.py
apps/backend/app/core/: settings.py
apps/backend/app/domain/: models.py
apps/backend/app/ingestion/: repository.py  service.py
apps/backend/app/parsers/: base.py  registry.py
apps/backend/app/search/: chunking.py  service.py
apps/backend/app/worker/: __main__.py
apps/backend/tests/: test_markdown_postprocessing.py  test_openwebui_routes.py  test_parser_strategies.py  test_repository_sanitization.py
apps/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/app/: App.vue  main.ts
apps/frontend/src/i18n/: index.js  index.js.map  index.ts
apps/frontend/src/markdown/: localization.ts
apps/frontend/src/pages/: ApiDocsPage.vue  DocumentPage.vue  DocumentsPage.vue  SearchPage.vue  UploadPage.vue
apps/frontend/src/router/: index.ts
apps/frontend/src/services/: api.ts
apps/frontend/src/stores/: searchStore.ts
apps/frontend/src/styles/: main.css
apps/frontend/src/theme/: index.ts
deploy/: docker-compose.yml
