[project]
name = "locascan-backend"
version = "0.1.0"
description = "Local document search backend with OCR and vector search"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "qdrant-client>=1.10.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

